--- a/package.json
+++ b/package.json
@@ -1,18 +1,44 @@
 {
-  "name": "hut-icon",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@hut-ui/icons-vue",
+  "private": false,
+  "version": "1.0.1",
   "type": "module",
+  "main": "dist/hut_icon_es.js",
+  "files": ["dist/**/*"],
+  "module": "dist/hut_icon_es.js",
+  "types": "dist/vue-icons/index.d.ts",
+  "author": "lgp",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
+  "browserslist": [
+    "defaults",
+    "not ie < 8",
+    "last 2 versions",
+    "> 1%",
+    "iOS 7",
+    "last 3 iOS versions"
+  ],
   "dependencies": {
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/compiler-sfc": "^3.2.45",
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "rollup-plugin-vue": "^6.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.11"
