--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "1.0.1",
   "type": "module",
   "main": "dist/hut_icon_es.js",
-  "files": ["dist/**/*"],
+  "files": [
+    "dist/**/*"
+  ],
   "module": "dist/hut_icon_es.js",
-  "types": "dist/vue-icons/index.d.ts",
+  "types": "dist/icons-vue/index.d.ts",
   "author": "lgp",
   "license": "MIT",
   "scripts": {
@@ -39,6 +41,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "rollup-plugin-vue": "^6.0.0",
+    "sass": "^1.56.2",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.11"
